fix: text alignment

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -50,6 +50,7 @@ body {
 .Content {
     max-width: 960px;
     padding: 30px;
+    text-align: center;
 
     @media all and (min-width: 400px) {
         padding: 40px;
@@ -57,6 +58,7 @@ body {
 
     @media all and (min-width: 650px) {
         padding: 80px 60px;
+        text-align: left;
     }
 }
 
